fix: add z-index to side-nav__overlay-active

--- a/packages/styles/scss/components/ui-shell/side-nav/_side-nav.scss
+++ b/packages/styles/scss/components/ui-shell/side-nav/_side-nav.scss
@@ -87,6 +87,7 @@
 
   .#{$prefix}--side-nav__overlay-active {
     @include breakpoint-down('lg') {
+      z-index: z('header');
       width: 100vw;
       height: 100vh;
       background-color: $overlay;
